# asi-project

./: .gitignore  README.md  project.ipynb  pyproject.toml
.dvc/: config
data/: .gitignore  btc_data.csv.dvc
src/api/: main.py  scheme.py
src/model/: train.py
src/model/joblib/: model_v1_BTC.joblib
