[project]
name = "asi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autots>=0.6.21",
    "dvc[gs]>=3.64.0",
    "dvc-gdrive>=3.0.1",
    "ipykernel>=6.31.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "yfinance>=0.2.66",
]
